objects/EinsteinResponseAction__c.object
<CustomObject>
    <fields>
        <fullName>ActionTarget__c</fullName>
        <label>Action Target</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Einstein Message</fullName>
                </value>
                <value>
                    <fullName>Record Page</fullName>
                </value>
                <value>
                    <fullName>Field Update</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Content__c</fullName>
        <label>Content</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>EinsteinResponseCard__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Einstein Response Card</label>
        <referenceTo>EinsteinResponseCard__c</referenceTo>
        <relationshipLabel>Einstein Response Actions</relationshipLabel>
        <relationshipName>EinsteinResponseCards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EinsteinResponse__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Einstein Response</label>
        <referenceTo>EinsteinResponse__c</referenceTo>
        <relationshipLabel>Einstein Response Actions</relationshipLabel>
        <relationshipName>EinsteinResponseActions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IconName__c</fullName>
        <label>Icon Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NextMessageKeyword__c</fullName>
        <label>Next Message Keyword</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>17</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <label>Position</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>left</fullName>
                </value>
                <value>
                    <fullName>right</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TargetFieldName__c</fullName>
        <label>Target Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TargetRecordId__c</fullName>
        <label>Target Record Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Variant__c</fullName>
        <label>Variant</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Einstein Response Action</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Einstein Response Actions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>